feat: add HMS namespace catalog explorer
